[tool.poetry]
name = "requestresponsecollector"
version = "0.2.0"
description = ""
authors = ["Naila <mammadaliyevan@gmail.com>"]
readme = "README.md"
repository = "https://github.com/mnaile/RequestResponseCollector"
packages = [
    {include = "collector"}
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.97.0"
aiohttp = "^3.8.6"
structlog = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
