[tool.poetry]
name = "requestresponsecollector"
version = "0.2.2"
description = ""
authors = ["Naila <mammadaliyevan@gmail.com>"]
readme = "README.md"
repository = "https://github.com/mnaile/RequestResponseCollector"
packages = [
    {include = "collector"}
]

[tool.poetry.dependencies]
python = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
